@@ -11,8 +11,11 @@ import com.tp.conferenceservice.services.ReviewService;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
+import org.springframework.cloud.client.discovery.EnableDiscoveryClient;
 import org.springframework.cloud.openfeign.EnableFeignClients;
 import org.springframework.context.annotation.Bean;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.time.Duration;
 import java.time.LocalDateTime;
@@ -22,7 +25,9 @@ import java.util.UUID;
 
 @SpringBootApplication
 @EnableFeignClients
+@EnableDiscoveryClient
 public class ConferenceServiceApplication {
+    private static final Logger log = LoggerFactory.getLogger(ConferenceServiceApplication.class);
 
     public static void main(String[] args) {
         SpringApplication.run(ConferenceServiceApplication.class, args);
@@ -32,44 +37,49 @@ public class ConferenceServiceApplication {
     CommandLineRunner commandLineRunner(ConferenceRepository conferenceRepository, ReviewService reviewRepository, KeynoteRestClient keynoteRestClient){
 
         return args ->{
+                List<Keynote> keynotes = keynoteRestClient.getAllKeynotes();
 
-            List<Keynote> keynotes = keynoteRestClient.getAllKeynotes();
-            System.out.println(keynotes.get(0).getName());
+                Keynote first = keynotes.getFirst();
+                Keynote second = keynotes.size() > 1 ? keynotes.get(1) : first;
 
+                List<Conference> conferences = List.of(
+                        Conference.builder()
+                                .id(UUID.randomUUID())
+                                .date(new java.sql.Date(2002, 02, 12))
+                                .titre("MultiAgent")
+                                .duree(60)
+                                .nbreInscrit(200)
+                                .score(2)
+                                .type(ConferenceType.COMMERCIALE)
+                                .keynoteIds(keynotes.stream().map(Keynote::getId).toList())
+                                .keynotes(keynotes)
+                                .build(),
+                        Conference.builder()
+                                .id(UUID.randomUUID())
+                                .date(new java.sql.Date(2002, 02, 12))
+                                .titre("l'enseignement moderne")
+                                .duree(30)
+                                .nbreInscrit(300)
+                                .score(4)
+                                .type(ConferenceType.ACADEMIQUE)
+                                .keynoteIds(List.of(first.getId(), second.getId()))
+                                .keynotes(List.of(first, second))
+                                .build()
+                );
+                conferenceRepository.saveAll(conferences);
 
+                List<Review> reviews = List.of(
+                        Review.builder()
+                                .id(UUID.randomUUID())
+                                .texte("Belle conf")
+                                .note(5)
+                                .date(new Date())
+                                .conference(conferences.get(1))
+                                .build());
+                reviews.forEach(review -> reviewRepository.saveReview(review));
 
-            List<Conference> conferences = List.of(Conference.builder()
-                            .id(UUID.randomUUID())
-                            .date(new java.sql.Date(2002,02,12))
-                            .titre("MultiAgent")
-                            .duree(60)
-                            .nbreInscrit(200)
-                            .score(2)
-                            .type(ConferenceType.COMMERCIALE)
-                            .keynotes(keynotes)
+                conferenceRepository.saveAll(conferences);
 
-                    .build(),
-                    Conference.builder()
-                            .id(UUID.randomUUID())
-                            .date(new java.sql.Date(2002,02,12))
-                            .titre("l'enseignement moderne")
-                            .duree(30)
-                            .nbreInscrit(300)
-                            .score(4)
-                            .type(ConferenceType.ACADEMIQUE)
-                            .keynotes(List.of(keynotes.get(0),keynotes.get(1)))
-                            .build());
-            conferenceRepository.saveAll(conferences);
-
-            List<Review> reviews = List.of(
-                    Review.builder()
-                            .id(UUID.randomUUID())
-                            .texte("Belle conf")
-                            .note(5)
-                            .date(new Date())
-                            .conference(conferences.get(1))
-                            .build());
-            reviews.forEach(review -> reviewRepository.saveReview(review));
 
         };
     }
